Added a portfolio section, made links on all pages

--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,10 @@
     <section id="ContactDetails">
       <p>For inquiries or to schedule a meeting, please call: <strong>+44 7540 931 822.</strong>.</p>
     </section>
+    <section id="LinkedIn">
+      <a href="https://www.linkedin.com/company/apex-qa-consulting/">Or visit our LinkedIn page and drop us a message.</a>
+
+    </section>
   </main>
 </body>
 </html>
