Updated buttons on the Portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,17 +26,17 @@
       <div class="benefit">
         <h3>QA Consulting</h3>
         <h4>Comprehensive QA Strategy & Automation for Client's Linux Box Fleet</h4>
-        <a href="portfolio-1.html">Show More</a>
+        <a href="portfolio-1.html" class="showmore-button">Show More</a>
       </div>
       <div class="benefit">
         <h3>High-Performance QA for Microservices</h3>
         <h4>QA approach designed specifically to cater to our Microservices environment</h4>
-        <a href="portfolio-2.html">Show More</a>
+        <a href="portfolio-2.html"class="showmore-button">Show More</a>
       </div>
       <div class="benefit">
         <h3>'Shift Left' for Early Bug Detection</h3>
         <h4>incorporated QA engineers directly into the development teams from the outset</h4>
-        <a href="portfolio-3.html">Show More</a>
+        <a href="portfolio-3.html"class="showmore-button">Show More</a>
       </div>
     </section>
     <section id="callToAction">
