Added a guide and a top section and background

--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
         <a href="portfolio.html">Portfolio</a>
+        <a href="guide.html">QA Guide</a>
     </nav>
 
   <main>
