--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
     <a href="about.html">About Us</a>
     <a href="services.html">Services</a>
     <a href="portfolio.html">Portfolio</a>
+    <a href="guide.html">QA Guide</a>
   </nav>
   <main>
     <h1>Contact Us</h1>
