--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <a href="about.html">About Us</a>
     <a href="contact.html">Contact</a>
     <a href="services.html">Services</a>
+    <a href="guide.html">QA Guide</a>
   </nav>
 
   <main>
