--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,7 @@
     <a href="about.html">About Us</a>
     <a href="contact.html">Contact</a>
     <a href="services.html">Services</a>
+    <a href="guide.html">QA Guide</a>
   </nav>
   <main>
     <section id="hero">
