Added a linkedIn button and Cookie message.

--- a/guide.html
+++ b/guide.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 
+    <script src="script.js"></script>
+
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Apex QA Consulting Guide to Quality Assurance</title>
@@ -9,7 +11,10 @@
 </head>
 
 <body>
-  <nav>
+    <nav>
+        <a href="https://www.linkedin.com/company/98236512/admin/feed/posts/" target="_blank">
+          <img src="images/LinkedInLogo.png" alt="Follow us on LinkedIn" style="position:absolute; top:20px; right:20px; width:80px; height:40px;">
+      </a>
     <img src="images/Apex_Logo_Full_Alpha.png" alt="Apex QA Consulting Logo" class="logo">
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
@@ -100,6 +105,14 @@
     </section>
 
   </main>
+
+  <div id="cookie-popup" class="cookie-popup">
+    <div class="cookie-content">
+      <p style="color:white;">We use cookies to ensure you get the best experience on our website. <a href="cookie-policy.html" style="color:white;">Learn more</a></p>
+      <button id="accept-cookies" class="cookie-button">Accept</button>
+    </div>
+  </div>
+
 </body>
 
 </html>
