--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+
+<script src="script.js"></script>
+
 <head>
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +13,9 @@
 </head>
 <body>
   <nav>
+    <a href="https://www.linkedin.com/company/98236512/admin/feed/posts/" target="_blank">
+      <img src="images/LinkedInLogo.png" alt="Follow us on LinkedIn" style="position:absolute; top:20px; right:20px; width:80px; height:40px;">
+  </a>
     <img src="images/Apex_Logo_Full_Alpha.png" alt="Apex QA Consulting Logo" class="logo">
     <a href="index.html">Home</a>
     <a href="about.html">About Us</a>
