--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
+
 <script src="script.js"></script>
+
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Apex QA Consulting - Portfolio</title>
@@ -9,6 +11,9 @@
 </head>
 <body>
   <nav>
+    <a href="https://www.linkedin.com/company/98236512/admin/feed/posts/" target="_blank">
+      <img src="images/LinkedInLogo.png" alt="Follow us on LinkedIn" style="position:absolute; top:20px; right:20px; width:80px; height:40px;">
+  </a>
     <img src="images/Apex_Logo_Full_Alpha.png" alt="Apex QA Consulting Logo" class="logo">
     <a href="index.html">Home</a>
     <a href="about.html">About Us</a>
@@ -46,5 +51,13 @@
       <a href="contact.html" class="cta-button">Contact Us</a>
     </section>
   </main>
+
+  <div id="cookie-popup" class="cookie-popup">
+    <div class="cookie-content">
+      <p style="color:white;">We use cookies to ensure you get the best experience on our website. <a href="cookie-policy.html" style="color:white;">Learn more</a></p>
+      <button id="accept-cookies" class="cookie-button">Accept</button>
+    </div>
+  </div>
+
 </body>
 </html>
