--- a/contact.html
+++ b/contact.html
@@ -36,5 +36,13 @@
 
     </section>
   </main>
+
+  <div id="cookie-popup" class="cookie-popup">
+    <div class="cookie-content">
+      <p style="color:white;">We use cookies to ensure you get the best experience on our website. <a href="cookie-policy.html" style="color:white;">Learn more</a></p>
+      <button id="accept-cookies" class="cookie-button">Accept</button>
+    </div>
+  </div>
+
 </body>
 </html>
