privacy policy added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <a href="contact.html">Contact</a>
     <a href="services.html">Services</a>
     <a href="guide.html">QA Guide</a>
+    <a href="privacy-policy.html">Privacy Policy</a>
   </nav>
 
   <main>
