--- a/services.html
+++ b/services.html
@@ -20,10 +20,11 @@
       </a>
         <img src="images/Apex_Logo_Full_Alpha.png" alt="Apex QA Consulting Logo" class="logo">
         <a href="index.html">Home</a>
+        <a href="portfolio.html">Portfolio</a>
         <a href="about.html">About Us</a>
         <a href="contact.html">Contact</a>
-        <a href="portfolio.html">Portfolio</a>
         <a href="guide.html">QA Guide</a>
+        <a href="privacy-policy.html">Privacy Policy</a>
     </nav>
   
   <main>
