--- a/about.html
+++ b/about.html
@@ -20,10 +20,12 @@
       </a>
         <img src="images/Apex_Logo_Full_Alpha.png" alt="Apex QA Consulting Logo" class="logo">
         <a href="index.html">Home</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
         <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+        <a href="services.html">Services</a>
+
         <a href="guide.html">QA Guide</a>
+        <a href="privacy-policy.html">Privacy Policy</a>
     </nav>
 
   <main>
