--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
     <a href="services.html">Services</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="guide.html">QA Guide</a>
+    <a href="privacy-policy.html">Privacy Policy</a>
   </nav>
   <main>
     <h1>Contact Us</h1>
