--- a/guide.html
+++ b/guide.html
@@ -21,6 +21,7 @@
     <a href="about.html">About Us</a>
     <a href="contact.html">Contact</a>
     <a href="services.html">Services</a>
+    <a href="privacy-policy.html">Privacy Policy</a>
   </nav>
 
   <main>
