--- a/portfolio-1.html
+++ b/portfolio-1.html
@@ -22,6 +22,8 @@
     <a href="about.html">About Us</a>
     <a href="contact.html">Contact</a>
     <a href="services.html">Services</a>
+    <a href="guide.html">QA Guide</a>
+    <a href="privacy-policy.html">Privacy Policy</a>
   </nav>
 
   <main>
