--- a/portfolio.html
+++ b/portfolio.html
@@ -20,6 +20,7 @@
     <a href="contact.html">Contact</a>
     <a href="services.html">Services</a>
     <a href="guide.html">QA Guide</a>
+    <a href="privacy-policy.html">Privacy Policy</a>
   </nav>
   <main>
     <section id="hero">
