--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -20,6 +20,7 @@
       <img src="images/LinkedInLogo.png" alt="Follow us on LinkedIn" style="position:absolute; top:20px; right:20px; width:80px; height:40px;">
   </a>
     <img src="images/Apex_Logo_Full_Alpha.png" alt="Apex QA Consulting Logo" class="logo">
+    <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="about.html">About Us</a>
     <a href="contact.html">Contact</a>
@@ -35,8 +36,22 @@
     </section>
 
     <section id="policy">
-      <p>At Apex QA Consulting, we respect your personal data. We have never sold your information to someone else for advertising, or made money by showing you other people's ads, and we never will. This has been our approach for almost 20 years, and we remain committed to it. This policy tells you what information we do collect from you, what we do with it, who can access it, and what you can do about it.</p>
-      <!-- Insert the rest of your privacy policy here.-->
+      <p>At Apex QA Consulting ("we," "us," "our"), we take your privacy seriously. This privacy policy outlines how we collect, store, use, and disclose your personal information in compliance with the General Data Protection Regulation (GDPR).</p>
+      <h3>Information We Collect</h3>
+      <p>We may collect and process the following categories of information about you: personal information such as name, address, email; business-related information such as company name, size, business type; technical information such as IP address, browser type, operating system; and usage data such as how you use our website, products, or services.</p>
+      <h3>How We Use Your Information</h3>
+      <p>We use the information we collect to provide our services, respond to inquiries, manage our relationship with you, improve our website, and fulfill any contractual obligations we may have with you. We do not sell your personal information to third parties.</p>
+      <h3>Data Security</h3>
+      <p>We implement appropriate technical and organizational measures to secure your personal data and prevent its loss, misuse, or alteration. However, no method of transmission over the internet or electronic storage is 100% secure, and we cannot guarantee absolute data security.</p>
+      <h3>Your Rights Under GDPR</h3>
+      <p>Under the GDPR, you have various rights in relation to your personal data. These include the right to access, correct, delete, restrict, or object to the use of your personal data. If you wish to exercise these rights, please contact us at our contact details below.</p>
+      <h3>Updates to This Policy</h3>
+      <p>We may update this policy from time to time. If we make significant changes, we will notify you through the contact information provided by you or through notice on our website.</p>
+      <h3>How We Use Your Information</h3>
+      <p>We use the information we collect to provide our services, respond to inquiries, manage our relationship with you, improve our website, and fulfill any contractual obligations we may have with you. We may also use anonymized data from your free trials to showcase our work in our portfolio, but we will not disclose any identifiable information about your company or products in this context.</p>
+      <p>Please note that all work conducted during a free trial may be used in Apex QA Consulting's portfolio. However, all company names and product names will be omitted or anonymized to protect your privacy. We believe this approach allows us to demonstrate our expertise while also respecting your proprietary information and confidentiality.</p>
+      <h3>Contact Us</h3>
+      <p>If you have any questions about this policy or our use of your personal data, please contact us.</p>
     </section>
 
   </main>
