Added a presentation to the portfolio

--- a/portfolio-1.html
+++ b/portfolio-1.html
@@ -32,6 +32,12 @@
         <h1>Automation for Client's Linux Box Fleet</h1>
         <p>At our client's organization, they manage an extensive network of Linux Boxes spread across their worldwide retail customer base. With a fleet of over 20,000 units, each store is equipped with one Linux Box, five DECT base units, and an average of 50 headsets. Our primary objective was to significantly reduce the amount of manual testing required, thereby boosting efficiency and reliability in their systems.</p>
       </section>
+
+      <!-- Download link for the presentation -->
+    <section id="download">
+      <h2>Download Our Presentation</h2>
+      <a href="images/ApexQAConsulting-ClientPlan22062023.pptx" download>Click here to download the PowerPoint Presentation</a>
+  </section>
       
       <section id="hero">
         <h2>12-Month QA Strategy</h2>
